[package]
name = "keystone"
version = "0.9.2"
edition = "2018"
authors = [
  "Remco Verhoef <remco.verhoef@dutchcoders.io>",
  "Tasuku SUENAGA a.k.a. gunyarakun <tasuku-s-github@titech.ac>"
]
description = "Rust bindings for the keystone-engine"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/keystone-engine/keystone"
include = [
  "src/*", "tests/*", "Cargo.toml", "COPYING", "README.md"
]

[dependencies]
libc = "0.2"
keystone-sys = { path = "keystone-sys", version = "0.9.2", default-features = false }

[features]
default = ["build_keystone_cmake", "all_arches"]

use_system_keystone = ["keystone-sys/use_system_keystone"]
build_keystone_cmake = ["keystone-sys/build_keystone_cmake"]

all_arches = [
  "arch_arm",
  "arch_arm64",
  "arch_mips",
  "arch_x86",
  "arch_ppc",
  "arch_sparc",
  "arch_systemz",
  "arch_hexagon",
]
arch_arm = ["keystone-sys/arch_arm"]
arch_arm64 = ["keystone-sys/arch_arm64"]
arch_mips = ["keystone-sys/arch_mips"]
arch_x86 = ["keystone-sys/arch_x86"]
arch_ppc = ["keystone-sys/arch_ppc"]
arch_sparc = ["keystone-sys/arch_sparc"]
arch_systemz = ["keystone-sys/arch_systemz"]
arch_hexagon = ["keystone-sys/arch_hexagon"]

[workspace]
